# AutoGantryEngineer

./: .gitignore
install/: local_setup.sh  setup.sh
install/bringup/share/bringup/: local_setup.sh  package.sh  package.xml
install/bringup/share/bringup/config/: test_goal_publishers_config.yaml
install/bringup/share/bringup/launch/: test_forward_position_controller.launch.py
install/controller/include/controller/: fuzzy_pose_generator.hpp  mtc.hpp  phase0_node.hpp  phase1_node.hpp
install/controller/lib/controller/: controller_node
install/controller/share/controller/: package.sh
install/gantry_robot_hardware_interface/include/gantry_robot_hardware_interface/: gantry_robot_hardware_interface.hpp
install/gantry_robot_hardware_interface/share/gantry_robot_hardware_interface/: gantry_robot_hardware_interface.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gantry_robot_hardware_interface/share/gantry_robot_hardware_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  gantry_robot_hardware_interfaceConfig-version.cmake  gantry_robot_hardware_interfaceConfig.cmake
install/gantry_robot_hardware_interface/share/gantry_robot_hardware_interface/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/gantry_robot_moveit_config/share/gantry_robot_moveit_config/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gantry_robot_moveit_config/share/gantry_robot_moveit_config/config/: gantry_robot.srdf  (+4 more)
install/gantry_robot_moveit_config_sim/share/gantry_robot_moveit_config_sim/: .setup_assistant  local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/models/share/models/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/motion_planning_test/lib/motion_planning_test/: ee_alignment_test  stand_random_pose  target_scene_publisher
install/motion_planning_test/share/motion_planning_test/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/motion_planning_test/share/motion_planning_test/cmake/: motion_planning_testConfig.cmake
install/motion_planning_test/share/motion_planning_test/launch/: ee_alignment_test.launch.py  full_test.launch.py  stand_random_pose.launch.py
install/orchestrator/lib/orchestrator/: serial_test_node
install/orchestrator/share/orchestrator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rm_interfaces/share/rm_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rm_serial_driver/include/rm_serial_driver/: fixed_packet.hpp  fixed_packet_tool.hpp  transporter_interface.hpp
install/rm_serial_driver/share/rm_serial_driver/: local_setup.sh  package.sh
log/: latest_build
src/bringup/: CMakeLists.txt
src/bringup/config/: gantry_robot_controllers.yaml
src/bringup/launch/: test_joint_trajectory_controller.launch.py
src/controller/: CMakeLists.txt
src/controller/include/controller/: circular_path_generator.hpp  fuzzy_pose_generator.hpp  mtc.hpp  phase0_node.hpp  phase1_node.hpp  phase2_node.hpp  phase_test.hpp
src/controller/launch/: controller.launch.py
src/controller/src/: controller_node.cpp
src/gantry_robot_hardware_interface/: CMakeLists.txt  gantry_robot_hardware_interface.xml  package.xml
src/gantry_robot_hardware_interface/include/gantry_robot_hardware_interface/: gantry_robot_hardware_interface.hpp
src/gantry_robot_hardware_interface/src/: gantry_robot_hardware_interface.cpp
src/gantry_robot_hardware_interface/test/: test_gantry_robot_hardware_interface.cpp
src/gantry_robot_moveit_config/: CMakeLists.txt  package.xml
src/gantry_robot_moveit_config/config/: dual_arm_system.urdf.xacro  gantry_robot.ros2_control.xacro  gantry_robot.srdf  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ros2_controllers_real.yaml
src/gantry_robot_moveit_config/launch/: demo.launch.py  moveit_rviz.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
src/gantry_robot_moveit_config_sim/: CMakeLists.txt
src/gantry_robot_moveit_config_sim/config/: gantry_robot.ros2_control.xacro  gantry_robot.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/gantry_robot_moveit_config_sim/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  static_virtual_joint_tfs.launch.py
src/models/: CMakeLists.txt
src/models/launch/: display.launch.py
src/models/meshes/: link1.STL  link2.STL  link3.STL  link6.STL  link7.STL
src/models/urdf/: gantry_robot.urdf  gantry_robot.xacro  scene.xacro  stand.urdf  stand.xacro
src/motion_planning_test/: CMakeLists.txt  README.md  README_STAND.md
src/motion_planning_test/launch/: target_scene_publisher.launch.py
src/motion_planning_test/src/: ee_alignment_test.cpp  stand_random_pose.cpp  target_scene_publisher.cpp
src/orchestrator/: CMakeLists.txt  README_BT.md  package.xml
src/orchestrator/config/: gantry_task.xml
src/orchestrator/include/orchestrator/: bt_mtc_nodes.hpp  orchestrator.hpp  phase_interface.hpp
src/orchestrator/launch/: bt_orchestrator.launch.py
src/orchestrator/src/: bt_orchestrator_node.cpp  serial_test_node.cpp
src/rm_interfaces/: CMakeLists.txt
src/rm_serial_driver/: CMakeLists.txt  test_rm_serial_driver.py
src/rm_serial_driver/include/rm_serial_driver/: protocol.hpp  protocol_factory.hpp  uart_transporter.hpp
src/rm_serial_driver/include/rm_serial_driver/protocol/: engineer_protocol.hpp
src/rm_serial_driver/src/: virtual_serial_node.cpp
src/rm_serial_driver/src/protocol/: engineer_protocol.cpp
src/rm_serial_driver/src/transporter_driver/: uart_transporter.cpp
src/rm_serial_driver/test/: dummy_transporter.hpp  test_fixed_packet_tool.cpp
(+73 files in other folders)
